--- a/week9/E-Seminar/index.html
+++ b/week9/E-Seminar/index.html
@@ -23,19 +23,25 @@
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
 				  <span class="navbar-toggler-icon"></span>
 				</button>
-				<a class="navbar-brand" href="#">Navbar</a>
+				<a class="navbar-brand" href="index.html">E-Seminar</a>
 			  
 				<div class="collapse navbar-collapse" id="navbarTogglerDemo03">
 				  <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 					<li class="nav-item active">
-					  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+					  <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item">
-					  <a class="nav-link" href="#">Link</a>
+					  <a class="nav-link" href="register.html">registrasi</a>
 					</li>
 					<li class="nav-item">
-					  <a class="nav-link disabled">Disabled</a>
+					  <a class="nav-link" href="data.html">data peserta</a>
 					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="create.html">create</a>
+					  </li>
+					  <li class="nav-item">
+						<a class="nav-link" href="kegiatan.html">kegiatan</a>
+					  </li>
 				  </ul>
 				  <form class="form-inline my-2 my-lg-0">
 					<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
